# aviasales-tail

./: .gitignore  README.md  cli.py  pyproject.toml  requirements-dev.txt
commands/: tail.py
samples/: titanic_5_lines.csv  titanic_890_lines.csv
snippets/: follow_with_sleep.py  follow_without_sleep.py  generate_dataset.py  read_from_end_as_bytes.py  reverse_read_lines.py
